[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Multiplayer.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -95.0
margin_right = 1.0
margin_bottom = 120.0
script = ExtResource( 1 )

[node name="Connection" type="MarginContainer" parent="."]
margin_top = -187.0
margin_right = 1023.0
margin_bottom = 405.0

[node name="VBoxContainer" type="VBoxContainer" parent="Connection"]
margin_right = 1023.0
margin_bottom = 592.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Connection/VBoxContainer"]
margin_top = 272.0
margin_right = 1023.0
margin_bottom = 296.0
alignment = 1

[node name="IpAdressLabel" type="Label" parent="Connection/VBoxContainer/HBoxContainer2"]
margin_left = 244.0
margin_top = 5.0
margin_right = 321.0
margin_bottom = 19.0
text = "Ip Address: "

[node name="IpAdressLineEdit" type="LineEdit" parent="Connection/VBoxContainer/HBoxContainer2"]
margin_left = 325.0
margin_right = 525.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
expand_to_text_length = true
caret_blink = true

[node name="NameLabel" type="Label" parent="Connection/VBoxContainer/HBoxContainer2"]
margin_left = 529.0
margin_top = 5.0
margin_right = 575.0
margin_bottom = 19.0
text = "Name: "

[node name="NameLineEdit" type="LineEdit" parent="Connection/VBoxContainer/HBoxContainer2"]
margin_left = 579.0
margin_right = 779.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
expand_to_text_length = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="Connection/VBoxContainer"]
margin_top = 300.0
margin_right = 1023.0
margin_bottom = 320.0
alignment = 1

[node name="Create" type="Button" parent="Connection/VBoxContainer/HBoxContainer"]
margin_left = 451.0
margin_right = 504.0
margin_bottom = 20.0
text = "Create"

[node name="Connect" type="Button" parent="Connection/VBoxContainer/HBoxContainer"]
margin_left = 508.0
margin_right = 572.0
margin_bottom = 20.0
text = "Connect"

[connection signal="pressed" from="Connection/VBoxContainer/HBoxContainer/Create" to="." method="__create_button__"]
[connection signal="pressed" from="Connection/VBoxContainer/HBoxContainer/Connect" to="." method="__connect_button__"]
